# reversi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  TODO.md  biome.json  bunfig.toml  clippy.toml  liblib.rlib  package.json  playwright.config.ts  rustfmt.toml  taplo.toml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.github/workflows/: ci.yml
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: botWorker.ts  gameController.ts  main.ts  styles.css  workerBot.ts
apps/web/test/: gameController.test.ts
e2e/: app.spec.ts
python/: pyproject.toml
python/train/: eval.py  eval_server.py  export.py  loop.py  loss.py  model.py  replay.py  replay_spool.py  test_smoke.py  tournament.py
rust/alphazero/: Cargo.toml  build.rs
rust/alphazero/src/: lib.rs
rust/mcts/: Cargo.toml
rust/mcts/src/: game.rs  lib.rs  py.rs  search.rs
rust/mcts/tests/: mcts_test.rs
rust/minimax/: Cargo.toml
rust/minimax/src/: board.rs  engine.rs  eval.rs  lib.rs
rust/minimax/tests/: board_test.rs
rust/nn/: Cargo.toml
rust/nn/src/: layers.rs  lib.rs  net.rs  weights.rs
rust/nn/tests/: nn_test.rs
weights/: .gitignore  iter_000200.npz  iter_000400.npz  iter_000600.npz
weights/champions/: champion_20260324_130652_loss1.5214.npz  champion_20260324_134742_loss2.3519.npz  champion_20260324_141005_loss2.2803.npz  champion_20260324_175137_loss1.9474.npz  champion_20260324_182100_loss1.9325.npz  champion_20260324_190432_loss1.9302.npz  champion_20260324_195756_loss1.8580.npz  champion_20260324_213550_loss1.9186.npz  champion_20260325_000035_loss1.9034.npz  history.json
