[project]
name = "reversi-train"
version = "0.1.0"
description = "AlphaZero self-play training pipeline for Reversi"
requires-python = ">=3.12"
dependencies = ["numpy>=2.4.3", "torch>=2.10.0", "tqdm>=4.67.3"]

[dependency-groups]
dev = ["ruff>=0.15.7", "tensorboard>=2.20.0"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["reversi_train"]
