[package]
name = "reversi_alphazero"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
reversi_mcts = { path = "../mcts" }
reversi_minimax = { path = "../minimax" }
reversi_nn = { path = "../nn" }
wasm-bindgen = "0.2"

[dev-dependencies]
reversi_nn = { path = "../nn", features = ["test-utils"] }
